# optim

./: .gitignore  README.md  optim.py  optim_gen.py  optim_test.py  pyproject.toml
json_server/: app.py  db.py  json_answer_template.json
optim/: optim.py
test/: SpeedTest.py  TestOptim.py
