[project]

name = "optim"  # Required

version = "0.1.0"  # Required

description = "A module for optimization"  # Optional

readme = "README.md" # Optional

requires-python = ">=3.11.4"

license = {file = "LICENSE.txt"}

keywords = ["optimization", "nelder mead"]  # Optional

authors = [
  {name = "Gleb Ilinyh", email = "gleb@ilinyh.ru" } # Optional
]

maintainers = [
  {name = "Gleb Ilinyh", email = "gleb@ilinyh.ru" } # Optional
]

dependencies = ["numpy"]

[project.optional-dependencies] # Optional
dev = ["pytest", "matplotlib", "matplotlib", "matplotlib"]
test = ["pytest"]

[project.urls]  # Optional
"Homepage" = "https://github.com/IlinyhGleb/optim"
"Source" = "https://github.com/IlinyhGleb/optim"

[tool.setuptools]
#package-data = {"sample" = ["*.dat"]}

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"